--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>com.obabichev</groupId>
     <artifactId>SpringSimpleApplication</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>4.2.3.RELEASE</version>
+        </dependency>
+    </dependencies>
 
 </project>
